--- a/public/src/expense-report/expense-report.html
+++ b/public/src/expense-report/expense-report.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../../bower_components/vaadin-date-picker/vaadin-date-picker.html">
 <link rel="import" href="../../bower_components/vaadin-grid/vaadin-grid.html">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+
 <link rel="import" href="expense-report-styles.html">
 
 <dom-module id="expense-report">
@@ -10,6 +12,7 @@
     <template>
         <style include="expense-report-styles"></style>
 
+        <!-- Date range picker for report -->
         <div class="row">
             <div class="col s6">
                 <label for="start">Start Date</label>
@@ -21,6 +24,7 @@
             </div>
         </div>
 
+        <!-- List of total spending by week -->
         <vaadin-grid class="materialgrid" aria-label="Report" items='{{weeklySpends}}'>
             <vaadin-grid-column>
                 <template class="header">Week</template>
@@ -44,11 +48,22 @@
                 notify: true
             },
 
+            loggedInUser: {
+                type: Object,
+                notify: true
+            },
+
+            /**
+             * The selected start date as a Date object.
+             */
             _reportStartDateParsed: {
                 type: Date,
                 computed: '_parseDateStringToObject(_reportStartDate)'
             },
 
+            /**
+             * The selected end date as a Date object.
+             */
             _reportEndDateParsed: {
                 type: Date,
                 computed: '_parseDateStringToObject(_reportEndDate)'
@@ -56,35 +71,71 @@
         },
 
         observers: [
-            'calculateWeeklySpends(_reportStartDateParsed, _reportEndDateParsed)',
+            '_sortExpenses(expenses)', // Sort the expenses when a new expense list is retrieved
+            '_sortExpenses(expenses.*)', // Sort the expenses  when a new expense is added or removed from the list
+            'calculateWeeklySpends(_reportStartDateParsed, _reportEndDateParsed)', // Recalculate the weekly spending totals when the date range changes
         ],
 
         ready: function(e){
             //this.expenses = [];
             this.weeklySpends = [];
+            this._sortExpenses();
         },
 
-        setReportRange: function(startDate, endDate) {
-            this._reportStartDate = startDate.toISOString().split('T')[0];
-            this._reportEndDate = endDate.toISOString().split('T')[0];
-        },
-
-        calculateWeeklySpends: function(startDate, endDate) {
-            // TODO: Add a check/validator for if startDate is before endDate
+        /**
+         * Sort the expense list by date, then calculate the weekly spending totals.
+         * @param expenseObject
+         * @private
+         */
+        _sortExpenses: function(expenseObject) {
+            this.weeklySpends = [];
             if (this.expenses && this.expenses.length > 0) {
-                let weeklySpends = [];
+                // Sort expenses by date
+                this.expenses.sort(function (expenseA, expenseB) {
+                    if (expenseA.date < expenseB.date) {
+                        return -1;
+                    }
+                    else if (expenseA.date > expenseB.date) {
+                        return 1;
+                    }
+                    else {
+                        return 0;
+                    }
+                });
 
+                // Set report date range filters
+                let startDate = new Date(this.expenses[0].date);
+                let endDate = new Date(this.expenses[this.expenses.length - 1].date);
+                this._reportStartDate = startDate.toISOString().split('T')[0];
+                this._reportEndDate = endDate.toISOString().split('T')[0];
+
+                this.calculateWeeklySpends(startDate, endDate);
+            }
+        },
+
+        /**
+         * Calculate the weekly spending totals from any expenses that belong to the logged in user.
+         * @param startDate
+         * @param endDate
+         */
+        calculateWeeklySpends: function(startDate, endDate) {
+            this.weeklySpends = [];
+            if (this.expenses && this.expenses.length > 0) {
                 let previousWeekStart = null;
                 let nextWeekStart = null;
 
+                // Iterate through the expense list to categorize them into weeks and calculate their totals
                 for (let i=0; i<this.expenses.length; i++) {
                     let expense = this.expenses[i];
                     let expenseDate = new Date(expense.date);
 
-                    // Only calculate weekly spending for given range
+                    // Only calculate weekly spending for expenses belonging to the current user and within the given range
+                    if (expense.username !== this.loggedInUser.username) continue;
+
                     if (expenseDate < startDate) continue;
                     if (expenseDate > endDate) break;
 
+                    // If this is the first expense recorded, create the first week's entry
                     if (!previousWeekStart) {
                         previousWeekStart = this._getPreviousSunday(expenseDate);
                         nextWeekStart = this._getNextWeek(previousWeekStart);
@@ -94,11 +145,13 @@
                         });
                     }
                     else {
+                        // If this expense occurred during the latest calculated week, recalculate the week's sum
                         if (expenseDate < nextWeekStart) {
                             let newAverageWeeklySpend = weeklySpends[weeklySpends.length - 1];
                             newAverageWeeklySpend.spent += expense.amount;
                             weeklySpends[weeklySpends.length - 1] = newAverageWeeklySpend;
                         }
+                        // If this expense occurs in the week after the latest calculated week, create next week's entry
                         else {
                             previousWeekStart = this._getPreviousSunday(expenseDate);
                             nextWeekStart = this._getNextWeek(previousWeekStart);
@@ -115,16 +168,34 @@
             }
         },
 
+        /**
+         * Get the previous Sunday of a given date.
+         * @param date
+         * @returns {Date}
+         * @private
+         */
         _getPreviousSunday: function(date) {
             let dt = new Date(date);
             dt.setDate(dt.getDate() - dt.getDay());
             return dt;
         },
 
+        /**
+         * Get the Date one week from the given date.
+         * @param date
+         * @returns {Date}
+         * @private
+         */
         _getNextWeek: function(date) {
             return new Date(date.getFullYear(), date.getMonth(), date.getDate() + 7);
         },
 
+        /**
+         * Parse a string from the date picker to a valid Date object.
+         * @param date
+         * @returns {Date}
+         * @private
+         */
         _parseDateStringToObject: function(date) {
             if (date) {
                 let dateParts = date.split('-');
@@ -132,6 +203,12 @@
             }
         },
 
+        /**
+         * Get a pretty date string from a Date object to display in the table.
+         * @param date
+         * @returns {string}
+         * @private
+         */
         _parseDateObjectToString: function(date) {
             if (date) {
                 let months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
