Use connection pool for database, push to Pivotal CloudFoundry

--- a/public/src/expense-report/expense-report.html
+++ b/public/src/expense-report/expense-report.html
@@ -121,6 +121,7 @@
         calculateWeeklySpends: function(startDate, endDate) {
             this.weeklySpends = [];
             if (this.expenses && this.expenses.length > 0) {
+                let weeklySpends = [];
                 let previousWeekStart = null;
                 let nextWeekStart = null;
 
